refactor: remove DecisionMakerTest and NegotiationEngineTest classes
chore: update architecture and negotiation engine documentation to remove unused fields

feat: enhance App component with debug toggle and supplier message handling

fix: update parseSupplierMessage function to accept additional parameters for reference terms and counter offers

test: remove obsolete tests for App, ConversationPane, DebugPane, and chat-offer

style: clean up test setup by removing unused imports